--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -4,6 +4,10 @@ on:
   schedule:
     - cron: '0 */6 * * *'  # Every 6 hours
   workflow_dispatch:  # Allow manual trigger
+  pull_request:
+    paths:
+      - 'sourcegraph-amp/PKGBUILD'
+    types: [opened, synchronize]
 
 jobs:
   check-and-update:
@@ -13,6 +17,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
           fetch-depth: 0
 
       - name: Set up Docker Buildx
@@ -69,8 +74,12 @@ jobs:
             echo "ℹ️ No update needed"
           fi
 
+      - name: Push to PR
+        if: github.event_name == 'pull_request' && steps.update.outputs.needs_update == 'true'
+        run: git push
+
       - name: Create Pull Request
-        if: steps.update.outputs.needs_update == 'true'
+        if: github.event_name != 'pull_request' && steps.update.outputs.needs_update == 'true'
         uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
