ci: perform publishing to aur in the same workflow
When the auto-update.yml workflow automatically merges the CR, it
doesn't trigger the publish-aur.yml workflow despite being configured to
run on `push` due to a limitation of the `GITHUB_TOKEN`
[(see)](https://docs.github.com/en/actions/security-for-github-actions/security-guides/automatic-token-authentication#using-the-github_token-in-a-workflow).

> When you use the repository's GITHUB_TOKEN to perform tasks, events triggered by the GITHUB_TOKEN, with the exception of workflow_dispatch and repository_dispatch, will not create a new workflow run. This prevents you from accidentally creating recursive workflow runs. For example, if a workflow run pushes code using the repository's GITHUB_TOKEN, a new workflow will not run even when the repository contains a workflow configured to run when push events occur.

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -109,3 +109,11 @@ jobs:
           gh pr merge $PR_NUMBER --rebase --admin
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Publish to AUR after successful update
+      - name: Publish to AUR
+        if: steps.update.outputs.needs_update == 'true'
+        uses: ./.github/actions/publish-aur
+        with:
+          aur_ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+          package_directory: sourcegraph-amp
